--- a/Total.css
+++ b/Total.css
@@ -25,6 +25,6 @@
     font-size: 18px;
     font-family: 'Courier New', Courier, monospace;
     font-style: normal;
-    color: aqua;
+    color: black;
   }
   
