--- a/App.css
+++ b/App.css
@@ -11,8 +11,9 @@
 
 .Heading_app {
   font-size: 30px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   font-style: normal;
   font-weight: 200;
+  align-content: center;
   color:black;
 }
