--- a/App.css
+++ b/App.css
@@ -17,3 +17,9 @@
   align-content: center;
   color:black;
 }
+.Apnabutton {
+  font-weight: 200;
+  font-family: 'Courier New', Courier, monospace;
+  align-content: center;
+  color:black;
+}
