--- a/App.css
+++ b/App.css
@@ -10,16 +10,22 @@
 }
 
 .Heading_app {
-  font-size: 30px;
+  font-size: 40px;
   font-family: 'Courier New', Courier, monospace;
   font-style: normal;
   font-weight: 200;
   align-content: center;
   color:black;
+  margin-left: 250PX;
+
 }
 .Apnabutton {
   font-weight: 200;
+  color:black;
+  background-color: white;
   font-family: 'Courier New', Courier, monospace;
   align-content: center;
   color:black;
+  margin-left: 240px;
+  border-color: black;
 }
